# VoxWebserver

./: CMakeLists.txt  ConnectManager.cpp  ConnectManager.h  FileManager.cpp  FileManager.h  PacketProcessor.cpp  PacketProcessor.h  README.md  SiteLoader.cpp  SiteLoader.h  main.cpp  settings.h  thpool.cpp  thpool.h
VoxWebAPI.LIN64/: CMakeLists.txt  Connection.cpp  DataFileStorage.h  DataTable.cpp  DataTable.h  HttpRequest.cpp  HttpRequest.h  Page.cpp  Page.h  Postgres.h  ProcessPage.h  SimplePage.cpp  Site.cpp  Site.h  VoxWebAPI.h  WebSocket.h  Webserver.cpp  Webserver.h  main.cpp  voxchain.h  voxstring.h
VoxWebAPI.LIN64/Database/: DataFileStorage.cpp  DataTable.h  Postgres.cpp
VoxWebAPI.LIN64/Ext/: voxcrypt.h  voxtimemap.h
VoxWebAPI.LIN64/Network/: NetworkHelper.cpp  NetworkHelper.h  Webserver.cpp  Webserver.h
VoxWebAPI.LIN64/PageTypes/: Page.cpp  Page.h  ProcessPage.cpp  SimplePage.cpp  SimplePage.h  Site.cpp  Site.h
VoxWebAPI.LIN64/RequestTypes/: Connection.cpp  Connection.h  HttpRequest.cpp  HttpRequest.h  WebSocket.cpp
VoxWebserver/: main.cpp
VoxWebserver/Loaders/: SiteLoader.cpp  SiteLoader.h
VoxWebserver/Processors/: ConnectManager.cpp  ConnectManager.h  FileManager.cpp  FileManager.h  PacketProcessor.h
